--- a/www/AddSite/addsite.html
+++ b/www/AddSite/addsite.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Almacenamiento de contraseñas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./addsite.css">
   </head>
   <body>
     <div class="container">
