--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,10 @@
     </div>
     <div class="password-list">
       <h2>Contraseñas de sitios web</h2>
+      <div>
+        <button class="btn" onclick="window.location.href='./AddSite/addSite.html'">Add site</button>
+        <button class="btn" onclick="window.location.href='./AddCategory/addCategory.html'">Add category</button>
+      </div>
       <table>
         <thead>
           <tr>
