--- a/www/AddCategory/addcategory.html
+++ b/www/AddCategory/addcategory.html
@@ -14,7 +14,7 @@
 			<h2>Introduce el nombre de la categoría:</h2>
 			<form id="category-form">
 				<label for="category-name">Nombre de la categoría:</label>
-				<input type="text" id="category-name" name="category-name">
+				<input type="text" id="category-name" name="category-name" required>
 				<input type="submit" value="Crear">
 			</form>
 		</section>
