--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Gestor de contraseñas</h1>
+  <h1>Pass saver</h1>
   <div class="container">
     <div class="category-list">
       <h2>Categorías</h2>
@@ -19,10 +19,10 @@
     <div class="password-list">
       <h2>Contraseñas de sitios web</h2>
       <div>
-        <button class="btn" onclick="window.location.href='./AddSite/addSite.html'">Add site</button>
-        <button class="btn" onclick="window.location.href='./AddCategory/addCategory.html'">Add category</button>
-        <button class="btn" id="delete-category-btn">Delete category</button>
-        <button class="btn" id="delete-site-btn">Delete site</button>
+        <button class="btn" onclick="window.location.href='./AddSite/addSite.html'">Añadir site</button>
+        <button class="btn" onclick="window.location.href='./AddCategory/addCategory.html'">Añadir categoría</button>
+        <button class="btn" id="delete-category-btn">Borrar categoría</button>
+        <button class="btn" id="delete-site-btn">Borrar site</button>
       </div>
       <table>
         <thead>
