--- a/www/index.html
+++ b/www/index.html
@@ -141,6 +141,7 @@
             // Borrar la variable de la categoría seleccionada
             selectedCategory = null;
           })
+          location.reload()
       }
     });
 
@@ -188,6 +189,7 @@
             // Borrar la variable del sitio web seleccionado
             selectedSite = null;
           })
+          location.reload()
       }
     });
 
